# aodf-toolkit

./: LICENSE  README.md  setup.cfg
aodf/filtering/: aodf_filter.cl  aodf_filter.py  utils.py
aodf/gpu/: opencl_utils.py
aodf/io/: utils.py
aodf/scilpy/gpuparallel/: opencl_utils.py
scilpy/: README.md
scilpy/gpuparallel/: opencl_utils.py
scilpy/io/: utils.py
scripts/: aodf_calibrate_filter.py  aodf_run_filter.py
