[metadata]
name = aodf
version = 0.0.1

[options]
packages =
    aodf
    scilpy
    scripts
install_requires =
    Pillow==9.0.*
    numpy==1.21.*
    nibabel==3.0.*
    pyopencl==2022.1.3
    future==0.17.*
    dipy>=1.4
    packaging>=19.0
    numba==0.55.*
    pandas==2.0.3

[options.entry_points]
console_scripts =
    aodf_filter = scripts.aodf_run_filter:main
    aodf_calibrate_filter = scripts.aodf_calibrate_filter:main
